--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 @import "variables";
 @import "mixins";
 
+@import "header";
+
 * {
   padding: 0;
   margin: 0;
@@ -17,90 +19,20 @@ body {
 }
 
 .wrapper {
-  max-width: 100%;
+  width: 100%;
   height: 100%;
-  //width: 1440px;
   background-color: $headerBgColor;
   margin: 0 auto;
-  //max-width: 1440px;
-  
-}
-.container {
- //max-width: 1240px;
- margin: 0 auto;
-}
-.header {
-  background-color: $headerBgColor;
-  border-bottom: 1px solid $borderColor;
-  overflow: hidden;
-  //padding: 0 52px;
- //max-width: 1440px;
-  
-
-  &__container {
-    //padding-left: 52px;
-    //padding-right: 52px;
-    max-width: 1336px;
-    margin: 0 auto;
-    padding: 0 50px;
-    display: flex;
-    align-items: center;
-    font-size: 15px;
-    height: 80px;
-    //@media screen and (max-width: 500px) {
-      //margin: 0 30px;
-    //}
-  }
-  &__logo {
-    //display: flex;
-    //justify-content: flex-start;
-    margin-right: auto;
-  }
 }
 
-.menu {
-  margin-left: auto;
-
-  &__list {
-    display: flex;
-    gap: 31px;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-  }
-
-  &__link {
-    text-decoration: none;
-  }
-  img {
-    padding-left: 4px;
-  }
-  &__link:hover {
-    color: red;
-  }
-
-  &__item {
-    display: flex;
-  }
-  &__item_four {
-    margin-right: 8px;
-  }
-  &__item_five {
-    align-items: center;
-    padding-left: 33px;
-    border-left: 1px solid $borderColor;
-    height: 79px;
-  }
-}
-@media screen and (max-width: 943px) {
-  .menu__item_six {
-    display: none;
-  }
+[class*="__container"] {
+  max-width: 1270px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .page {
   background-color: #efeee8;
-  
 }
 .page__container {
   background-color: #efeee8;
@@ -211,11 +143,14 @@ body {
 
 //body block
 
-.page__about {
-  padding: 100px;
+.about {
+  padding: 100px 0;
   background-color: #efeee8;
+
   @media screen and (max-width: 960px) {
-    padding: 50px 20px;
+    padding: 50px 0;
+  }
+  &__container {
   }
 }
 .header-about {
@@ -245,12 +180,11 @@ body {
     }
     @media screen and (max-width: 768px) {
       margin-left: 5px;
-      
     }
   }
 }
 .text-block {
-  &__one {
+  &__bigfont {
     h2 {
       padding-bottom: 28px;
       @include bigFont;
@@ -318,7 +252,52 @@ body {
     background-color: red;
   }
 }
+//
 
-//&__vector {
-//content: '\2192';
-//}
+.about__body {
+  margin-top: 176px;
+}
+[class*="__bigfont"] {
+  h2 {
+    padding-bottom: 28px;
+    @include bigFont;
+  }
+}
+.body-about__bigfont p {
+  max-width: 634px;
+}
+.body-about__images {
+  margin-top: 43px;
+}
+.image-body {
+  &__section {
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+  }
+}
+.one-image {
+  display: flex;
+  flex-direction: column;
+  background-color: #e4e2d3;
+  max-width: 392px;
+  min-height: 358px;
+  padding: 24px 24px 0 24px;
+  
+  
+  &__image {
+    display: flex;
+    width: 100%;
+    margin-bottom: 22px;
+  }
+  &__text {
+    
+      &:after {
+    content: "\2014";
+    padding-left: 196px;
+    
+    
+    
+  }
+}
+}
