--- a/scss/style.scss
+++ b/scss/style.scss
@@ -268,12 +268,17 @@ body {
   margin-top: 176px;
   &__block {
     margin-top: 43px;
+    padding-bottom: 40px;
+    border-bottom: 1px solid rgba(51, 51, 51, 0.1);
     display: flex;
     justify-content: space-between;
     font-size: 16px;
-    
   }
- 
+  .last {
+    border-bottom: none;
+    padding-bottom: 0;
+  }
+
   &__item {
     background-color: #e4e2d3;
     max-width: 392px;
@@ -294,7 +299,105 @@ body {
     }
   }
 }
-
-.portfolio__about, .portfolio__blog, .portfolio__other {
+.portfolio__about,
+.portfolio__blog,
+.portfolio__other {
   margin-top: 55px;
+}
+
+///
+
+.about__footer {
+  margin-top: 160px;
+  //display: flex;
+}
+.footer-about {
+  display: flex;
+
+  &__section {
+    margin: 0 auto;
+    max-width: 1000px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.image-footer {
+  position: relative;
+  &__image {
+    display: flex;
+    img {
+      //width: 100%;
+      //height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__text {
+    position: absolute;
+    background: #333333;
+    bottom: 24px;
+    left: 24px;
+    padding: 24px;
+    max-width: 436px;
+    p {
+      font-family: "Libre Baskerville", sans-serif;
+      font-size: 16px;
+      color: rgba(239, 238, 232, 0.9);
+      line-height: 21.28px;
+      padding-bottom: 15px;
+    }
+    span {
+      font-family: "Reenie Beanie", sans-serif;
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 40px;
+      color: #efeee8;
+    }
+  }
+}
+.footer-about__form {
+  display: flex;
+  margin: 80px 0 0 54px;
+  max-width: 440px;
+  legend {
+    @include bigFont;
+    max-width: 429px;
+  }
+}
+.footer-about__input {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  li {
+    list-style: none;
+    padding: 15px 0 0 0px;
+    border-bottom: 1px solid rgba(51, 51, 51, 0.8);
+    font-family: 'Libre Baskerville', sans-serif;
+    font-size: 16px;
+    line-height: 21.28px;
+  }
+  input {
+    width: 440px;
+    height: 55px;
+    padding-left: 34px;
+    background-color: #efeee8;
+    
+  }
+  .button {
+    background-color: #333333;
+    height: 52px;
+    width: 440px;
+    color:#efeee8;
+    padding: 15px 164px;
+    margin-top: 40px;
+    cursor: pointer;
+    button {
+    font-family: 'Libre Baskerville', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21.28px;
+    background-color: #333333;
+    color:#efeee8;
+    cursor: pointer;
+    }
+  }
 }
