--- a/scss/style.scss
+++ b/scss/style.scss
@@ -351,31 +351,28 @@ body {
 
   &__block {
     margin-top: 43px;
-    
+
     padding-bottom: 40px;
     border-bottom: 1px solid rgba(51, 51, 51, 0.1);
     display: flex;
-    @media (max-width:600px) {
+    @media (max-width: 600px) {
       display: flex;
       flex-direction: column;
       align-items: center;
     }
-    
-    }
-    //flex-wrap: wrap;
-    //justify-content: space-between;
-    
-   
-  
+  }
+  //flex-wrap: wrap;
+  //justify-content: space-between;
+
   .last {
     border-bottom: none;
     padding-bottom: 0;
     margin-top: 20px;
-    @media (max-width:900px) {
+    @media (max-width: 900px) {
       margin-top: 10px;
     }
-    @media (max-width:600px) {
-      margin: 0 ;
+    @media (max-width: 600px) {
+      margin: 0;
     }
   }
 
@@ -384,27 +381,23 @@ body {
     max-width: 392px;
     max-height: 358px;
     overflow: hidden;
-    
+
     margin: 0 20px 0 0px;
     padding: 24px 24px 30px 24px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    @media (max-width:900px) {
+    @media (max-width: 900px) {
       margin: 0 10px 0 0px;
     }
-    @media (max-width:600px) {
+    @media (max-width: 600px) {
       margin: 0 0px 10px 0;
     }
-   
   }
 
   &__image {
-    
     img {
       max-width: 100%;
-      
-      
     }
   }
   &__text {
@@ -431,6 +424,12 @@ body {
 
 .about__footer {
   margin-top: 160px;
+  @media (max-width: 800px) {
+    margin-top: 100px;
+  }
+  @media (max-width: 500px) {
+    margin-top: 55px;
+  }
   //display: flex;
 }
 .footer-about {
@@ -438,28 +437,35 @@ body {
 
   &__section {
     margin: 0 auto;
-    max-width: 1000px;
     display: flex;
-    justify-content: space-between;
+    overflow: hidden;
   }
 }
+.footer-about__image {
+}
 .image-footer {
-  position: relative;
+  //position: relative;
   &__image {
-    display: flex;
+    flex: 0 0 50%;
+    @media (max-width: 957px) {
+      flex: 0 0 33.333%;
+    }
+    @media (max-width: 630px) {
+      display: none;
+    }
+
     img {
-      //width: 100%;
-      //height: 100%;
-      object-fit: cover;
+      width: 100%;
     }
   }
   &__text {
-    position: absolute;
     background: #333333;
-    bottom: 24px;
-    left: 24px;
+
     padding: 24px;
     max-width: 436px;
+    @media (max-width: 630px) {
+      display: none;
+    }
     p {
       font-family: "Libre Baskerville", sans-serif;
       font-size: 16px;
@@ -477,51 +483,53 @@ body {
   }
 }
 .footer-about__form {
-  display: flex;
   margin: 80px 0 0 54px;
   max-width: 440px;
+  overflow: hidden;
+
   legend {
     @include bigFont;
     max-width: 429px;
   }
-}
-.footer-about__input {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  li {
-    list-style: none;
-    padding: 15px 0 0 0px;
-    border-bottom: 1px solid rgba(51, 51, 51, 0.8);
-    font-family: "Libre Baskerville", sans-serif;
-    font-size: 16px;
-    line-height: 21.28px;
-  }
-  input {
-    width: 440px;
-    height: 55px;
-    padding-left: 34px;
-    background-color: #efeee8;
-  }
-  button {
-    background-color: #333333;
-    height: 52px;
-    width: 440px;
-    color: #efeee8;
-    padding: 15px 164px;
-    margin-top: 40px;
-    cursor: pointer;
 
-    font-family: "Libre Baskerville", sans-serif;
-    font-size: 16px;
-    font-weight: 700;
+  .footer-about__input {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    li {
+      list-style: none;
+      padding: 15px 0 0 0px;
+      border-bottom: 1px solid rgba(51, 51, 51, 0.8);
+      font-family: "Libre Baskerville", sans-serif;
+      font-size: 16px;
+      line-height: 21.28px;
+    }
+    input {
+      width: 440px;
+      height: 55px;
+      padding-left: 34px;
+      background-color: #efeee8;
+    }
+    button {
+      background-color: #333333;
+      height: 52px;
+      width: 440px;
+      color: #efeee8;
+      padding: 15px 164px;
+      margin-top: 40px;
+      cursor: pointer;
 
-    background-color: #333333;
-    color: #efeee8;
-    cursor: pointer;
-    &:hover {
-      background-color: rgb(107, 107, 40);
-      color: #131010;
+      font-family: "Libre Baskerville", sans-serif;
+      font-size: 16px;
+      font-weight: 700;
+
+      background-color: #333333;
+      color: #efeee8;
+      cursor: pointer;
+      &:hover {
+        background-color: rgb(107, 107, 40);
+        color: #131010;
+      }
     }
   }
 }
