--- a/scss/style.scss
+++ b/scss/style.scss
@@ -445,129 +445,131 @@ body {
     margin: 0 auto;
     display: flex;
     overflow: hidden;
-    &__collapse {
-      position: relative;
+  }
+  &__collapse {
+    position: relative;
+  }
+  &__image {
+    
+    flex: 0 0 50%;
+    @media (max-width: 957px) {
+      flex: 0 0 33.333%;
     }
-    &__image {
-      flex: 0 0 50%;
-      @media (max-width: 957px) {
-        flex: 0 0 33.333%;
+    @media (max-width: 630px) {
+      display: none;
+    }
+    height: 570px;
+    max-width: 484px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &__text {
+    position: absolute;
+    bottom: 24px;
+    left: 24px;
+    background: #333333;
+    padding: 24px;
+    max-width: 436px;
+
+    @media (max-width: 630px) {
+      display: none;
+    }
+    p {
+      font-family: "Libre Baskerville", sans-serif;
+      font-size: 16px;
+      color: rgba(239, 238, 232, 0.9);
+      line-height: 21.28px;
+      padding-bottom: 15px;
+    }
+    span {
+      font-family: "Reenie Beanie", sans-serif;
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 40px;
+      color: #efeee8;
+    }
+  }
+
+  &__form {
+    margin: 80px 0 0 54px;
+    max-width: 440px;
+    overflow: hidden;
+    @media (max-width: 1030px) {
+      margin-left: 20px;
+    }
+    @media (max-width: 630px) {
+      margin: 30px auto 0;
+      text-align: center;
+    }
+    @media (max-width: 400px) {
+      margin-top: 15px;
+    }
+  }
+  &__bigfont {
+    @include bigFont;
+    max-width: 429px;
+  }
+
+  &__input {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    @media (max-width: 900px) {
+      margin-top: 0;
+    }
+    li {
+      list-style: none;
+      padding: 15px 0 0 0px;
+      border-bottom: 1px solid rgba(51, 51, 51, 0.8);
+      font-family: "Libre Baskerville", sans-serif;
+      font-size: 16px;
+      line-height: 21.28px;
+      @media (max-width: 460px) {
+        padding: 10px;
+      }
+    }
+    input {
+      width: 100%;
+      object-fit: cover;
+      height: 55px;
+      padding-left: 34px;
+      background-color: #efeee8;
+      @media (max-width: 460px) {
+        height: 30px;
       }
       @media (max-width: 630px) {
-        display: none;
-      }
-      min-height: 570px;
-      max-width: 484px;
-
-      img {
-        width: 100%;
+        background: url(/pictures/body/footer.png);
       }
     }
-
-    &__text {
-      position: absolute;
-      bottom: 24px;
-      left: 24px;
-      background: #333333;
-      padding: 24px;
-      max-width: 436px;
-
-      @media (max-width: 630px) {
-        display: none;
+    button {
+      background-color: #333333;
+      height: 52px;
+      width: 100%;
+      color: #efeee8;
+      padding: 15px 164px;
+      margin-top: 40px;
+      margin-bottom: 40px;
+      cursor: pointer;
+      font-family: "Libre Baskerville", sans-serif;
+      font-size: 16px;
+      font-weight: 700;
+      background-color: #333333;
+      color: #efeee8;
+      cursor: pointer;
+      @media (max-width: 950px) {
+        padding: 15px 85px;
       }
-      p {
-        font-family: "Libre Baskerville", sans-serif;
-        font-size: 16px;
-        color: rgba(239, 238, 232, 0.9);
-        line-height: 21.28px;
-        padding-bottom: 15px;
+      @media (max-width: 450px) {
+        font-size: 14px;
       }
-      span {
-        font-family: "Reenie Beanie", sans-serif;
-        font-size: 32px;
-        font-weight: 500;
-        line-height: 40px;
-        color: #efeee8;
-      }
-    }
-
-    &__form {
-      margin: 80px 0 0 54px;
-      max-width: 440px;
-      overflow: hidden;
-      @media (max-width: 1030px) {
-        margin-left: 20px;
-      }
-      @media (max-width: 630px) {
-        margin: 30px auto 0;
-        text-align: center;
-      }
-      @media (max-width: 400px) {
-        margin-top: 15px;
-      }
-
-      &__bigfont {
-        @include bigFont;
-        max-width: 429px;
-      }
-
-      &__input {
-        margin-top: 10px;
-        display: flex;
-        flex-direction: column;
-        @media (max-width: 900px) {
-          margin-top: 0;
-        }
-        li {
-          list-style: none;
-          padding: 15px 0 0 0px;
-          border-bottom: 1px solid rgba(51, 51, 51, 0.8);
-          font-family: "Libre Baskerville", sans-serif;
-          font-size: 16px;
-          line-height: 21.28px;
-          @media (max-width: 460px) {
-            padding: 10px;
-          }
-        }
-        input {
-          width: 100%;
-          object-fit: cover;
-          height: 55px;
-          padding-left: 34px;
-          background-color: #efeee8;
-          @media (max-width: 460px) {
-            height: 30px;
-          }
-          @media (max-width: 630px) {
-            background: url(/pictures/body/footer.png);
-          }
-        }
-        button {
-          background-color: #333333;
-          height: 52px;
-          width: 100%;
-          color: #efeee8;
-          padding: 15px 164px;
-          margin-top: 40px;
-          margin-bottom: 40px;
-          cursor: pointer;
-          font-family: "Libre Baskerville", sans-serif;
-          font-size: 16px;
-          font-weight: 700;
-          background-color: #333333;
-          color: #efeee8;
-          cursor: pointer;
-          @media (max-width: 950px) {
-            padding: 15px 85px;
-          }
-          @media (max-width: 450px) {
-            font-size: 14px;
-          }
-          &:hover {
-            background-color: rgb(107, 107, 40);
-            color: #131010;
-          }
-        }
+      &:hover {
+        background-color: rgb(107, 107, 40);
+        color: #131010;
       }
     }
   }
