--- a/scss/style.scss
+++ b/scss/style.scss
@@ -468,7 +468,7 @@ body {
 
   &__text {
     position: absolute;
-    bottom:24px;
+    bottom: 24px;
     left: 50%;
     transform: translateX(-50%);
     background: #333333;
@@ -477,7 +477,6 @@ body {
     width: calc(100% - 20px);
     @media (max-width: 960px) {
       padding: 14px;
-      
     }
     @media (max-width: 630px) {
       display: none;
@@ -589,7 +588,66 @@ body {
   }
 }
 .footer {
-  background-color: #E4E2D3;
+  background-color: #e4e2d3;
   border-top: 1px solid #333333;
   padding-top: 80px;
+  &__row_top {
+    display: flex;
+
+    justify-content: space-between;
+  }
+  &__social {
+    &__link {
+      margin-left: 16px;
+    }
+  }
+  &__row_center {
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__text {
+    width: 400px;
+    font-family: "Libre Baskerville", sans-serif;
+    font-size: 22px;
+  }
+  &__menu {
+    display: flex;
+
+    //flex-direction: column;
+  }
+  &__list {
+    margin-left: 80px;
+    list-style: none;
+    li {
+      line-height: 20px;
+      font-size: 16px;
+      padding-bottom: 24px;
+      &:first-child {
+        font-weight: 700;
+      }
+    }
+  }
+  &__row_end {
+    margin-top: 100px;
+  }
+  &__end {
+    padding-top: 33px;
+    padding-bottom: 19px;
+    font-family: 'libre Baskerville', sans-serif;
+    font-size: 14px;
+    img {
+      padding: 0 8px;
+    }
+    a {
+      text-decoration: none;
+      color: #333333;
+      &:hover {
+        color: red;
+      }
+      &:active {
+        color: green;
+      }
+    }
+  }
 }
