--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,10 +1,9 @@
 .header {
   background-color: $headerBgColor;
   border-bottom: 1px solid $borderColor;
-  
+
   //padding: 0 52px;
- //max-width: 1440px;
-  
+  //max-width: 1440px;
 
   &__container {
     //padding-left: 52px;
@@ -14,10 +13,10 @@
     padding: 0 15px;
     display: flex;
     align-items: center;
-    
+
     height: 80px;
     //@media  (max-width: 1370px) {
-      //max-width: ;
+    //max-width: ;
     //}
   }
   &__logo {
@@ -29,14 +28,16 @@
 
 .menu {
   margin-left: auto;
-
+  @media (max-width: 767px) {
+    display: none;
+  }
   &__list {
     display: flex;
     gap: 31px;
     justify-content: flex-end;
     align-items: center;
     list-style: none;
-    
+
     // @include adaptiveClamp('gap', 31, 15, 1400, 768, 1);
     @media (max-width: 1024.98px) {
       gap: 15px;
@@ -52,14 +53,13 @@
     font-size: 15px;
     &:hover {
       color: red;
-      
     }
     img {
       padding-left: 4px;
     }
   }
   &__item {
-    display: flex; 
+    display: flex;
     &_four {
       margin-right: 8px;
     }
@@ -79,31 +79,61 @@
 .sub-menu__item {
   display: none;
   position: absolute;
-  top:10px;
-  left:0px;
+  top: 10px;
+  left: 0px;
   list-style: none;
   padding-top: 20px;
   font-size: 15px;
-  
+
   width: 100%;
   li {
     padding-bottom: 10px;
-    background-color:rgb(218, 224, 230) ;
+    background-color: rgb(218, 224, 230);
     //border: 1px solid #222;
   }
-  a{
-  text-decoration: none;
-  color: $borderColor;
-  
-  &:hover {
-    color: blue;
+  a {
+    text-decoration: none;
+    color: $borderColor;
+
+    &:hover {
+      color: blue;
+    }
   }
+}
+.menu__list > li:hover .sub-menu__item {
+  display: block;
+  text-align: center;
+}
+@media (max-width: 767px) {
+  .header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+
+    &:before,
+    &:after {
+      content: "";
+      background-color: $borderColor;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      left: 0;
+    }
+    &::before {
+      top: 0;
+    }
+    &::after {
+      bottom: 0;
+    }
+    span {
+      position: absolute;
+      background-color: $borderColor;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      top: 9px;
+    }
   }
   
 }
-.menu__list>li:hover .sub-menu__item {
-  
-    display: block;
-    text-align: center;
-  }
-
