--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,39 +2,38 @@
   background-color: $headerBgColor;
   border-bottom: 1px solid $borderColor;
 
-  //padding: 0 52px;
-  //max-width: 1440px;
-
   &__container {
-    //padding-left: 52px;
-    //padding-right: 52px;
     max-width: 1370px;
-    margin: 0 auto;
     padding: 0 15px;
     display: flex;
     align-items: center;
-
+    justify-content: space-between;
     height: 80px;
-    //@media  (max-width: 1370px) {
-    //max-width: ;
-    //}
+
+    @media (max-width: 767px) {
+      height: 60px;
+    }
   }
   &__logo {
-    //display: flex;
-    //justify-content: flex-start;
-    margin-right: auto;
+    position: relative;
+    z-index: 3;
+    @media (max-width: 450px) {
+      flex: 0 0 150px;
+    }
+    @media (max-width: 330px) {
+      flex: 0 0 120px;
+    }
+    img {
+      max-width: 100%;
+    }
   }
 }
 
 .menu {
-  margin-left: auto;
-  @media (max-width: 767px) {
-    display: none;
-  }
   &__list {
     display: flex;
     gap: 31px;
-    justify-content: flex-end;
+
     align-items: center;
     list-style: none;
 
@@ -103,6 +102,9 @@
 .menu__list > li:hover .sub-menu__item {
   display: block;
   text-align: center;
+  @media (max-width: 767px) {
+    display: none;
+  }
 }
 @media (max-width: 767px) {
   .header__burger {
@@ -110,6 +112,7 @@
     position: relative;
     width: 30px;
     height: 20px;
+    z-index: 3;
 
     &:before,
     &:after {
@@ -135,5 +138,55 @@
       top: 9px;
     }
   }
-  
+  .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: yellow;
+    padding: 70px 0 20px 10px;
+
+    span {
+      display: none;
+    }
+    a img {
+      display: none;
+    }
+    &__item_four {
+      margin-right: 0;
+    }
+    &__item_five {
+      border-left: none;
+      padding-left: 0;
+      height: 15px;
+    }
+    &__list {
+      display: block;
+    }
+    &__item {
+      margin: 0 0 20px 0;
+    }
+    &__link {
+      font-size: 18px;
+      text-transform: uppercase;
+    }
+  }
+  .header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: purple;
+      z-index: 2;
+    }
+  }
 }
