--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -122,6 +122,7 @@
       width: 100%;
       height: 2px;
       left: 0;
+      transition: all 0.3s ease 0s;
     }
     &::before {
       top: 0;
@@ -136,16 +137,29 @@
       width: 100%;
       height: 2px;
       top: 9px;
+      transition: all 0.3s ease 0s;
+    }
+    &.active::before {
+      transform: rotate(45deg);
+      top: 9px;
+    }
+    &.active::after {
+      transform: rotate(-45deg);
+      bottom: 9px;
+    }
+    &.active span {
+      transform: scale(0);
     }
   }
   .menu {
     position: fixed;
-    top: 0;
+    top: -100%;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: yellow;
     padding: 70px 0 20px 10px;
+    transition: all 0.3s ease 0s;
 
     span {
       display: none;
@@ -171,6 +185,9 @@
       font-size: 18px;
       text-transform: uppercase;
     }
+    &.active {
+      top: 0;
+    }
   }
   .header {
     position: fixed;
@@ -190,3 +207,6 @@
     }
   }
 }
+/*.header__burger.active::before {
+transform: rotate(45deg) ;
+}*/
