--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -75,7 +75,7 @@
     }
   }
 }
-.sub-menu__item {
+.sub-menu__list {
   display: none;
   position: absolute;
   top: 10px;
@@ -99,7 +99,7 @@
     }
   }
 }
-.menu__list > li:hover .sub-menu__item {
+.menu__item:hover .sub-menu__list {
   display: block;
   text-align: center;
   @media (max-width: 767px) {
@@ -113,6 +113,7 @@
     width: 30px;
     height: 20px;
     z-index: 3;
+    cursor: pointer;
 
     &:before,
     &:after {
@@ -151,13 +152,14 @@
       transform: scale(0);
     }
   }
+  
   .menu {
     position: fixed;
     top: -100%;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: yellow;
+    background-color:#EFEEE8 ;
     padding: 70px 0 20px 10px;
     transition: all 0.3s ease 0s;
 
@@ -202,7 +204,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: purple;
+      background-color: #E4E2D3;
       z-index: 2;
     }
   }
