--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import "mixins";
 
 @import "header";
+@import "footer";
 
 * {
   padding: 0;
@@ -419,11 +420,16 @@ body {
 
 .about__footer {
   margin-top: 160px;
+  margin-bottom: 80px;
   @media (max-width: 800px) {
     margin-top: 100px;
   }
+  @media (max-width: 686px) {
+    margin-bottom: 40px;
+  }
   @media (max-width: 500px) {
     margin-top: 55px;
+   
   }
   @media (max-width: 630px) {
     background: url(/pictures/body/footer.png) 50% no-repeat;
@@ -579,177 +585,4 @@ body {
     }
   }
 }
-.footer {
-  background-color: #e4e2d3;
-  border-top: 1px solid #333333;
-  padding-top: 80px;
-  &__row_top {
-    display: flex;
 
-    justify-content: space-between;
-  }
-  &__social {
-    &__link {
-      margin-left: 16px;
-    }
-  }
-  &__row_center {
-    margin-top: 80px;
-    display: flex;
-    justify-content: space-between;
-    @media (max-width: 720px) {
-      flex-direction: column;
-      margin-top: 40px;
-    }
-  }
-  &__text {
-    width: 400px;
-    font-family: "Libre Baskerville", sans-serif;
-    font-size: 22px;
-    @media (max-width: 1034px) {
-      font-size: 20px;
-    }
-    @media (max-width: 890px) {
-      font-size: 17px;
-    }
-    @media (max-width: 890px) {
-      flex: 0 0 33.333%;
-    }
-    @media (max-width: 720px) {
-      width: 100%;
-    }
-    @media (max-width: 500px) {
-      font-size: 13px;
-    }
-  }
-  &__menu {
-    display: flex;
-    @media (max-width: 720px) {
-      display: none;
-    }
-    //flex-direction: column;
-  }
-  &__list {
-    margin-left: 80px;
-    list-style: none;
-    @media (max-width: 1034px) {
-      margin-left: 40px;
-    }
-    @media (max-width: 720px) {
-      margin: 20px 40px 0 0;
-    }
-
-    li {
-      line-height: 20px;
-      font-size: 16px;
-      padding-bottom: 24px;
-      @media (max-width: 1034px) {
-        padding-bottom: 18px;
-      }
-      @media (max-width: 890px) {
-        font-size: 14px;
-        padding-bottom: 15px;
-      }
-      &:first-child {
-        font-weight: 700;
-      }
-    }
-  }
-  &__row_end {
-    margin-top: 100px;
-  }
-  &__end {
-    padding-top: 33px;
-    padding-bottom: 19px;
-    font-family: "libre Baskerville", sans-serif;
-    font-size: 14px;
-    img {
-      padding: 0 8px;
-    }
-    a {
-      text-decoration: none;
-      color: #333333;
-      &:hover {
-        color: red;
-      }
-      &:active {
-        color: green;
-      }
-    }
-  }
-  &__mobile {
-    @media (min-width: 720px) {
-      display: none;
-    }
-    @media (max-width: 720px) {
-      //display: flex;
-      margin-top: 20px;
-    }
-  }
-}
-.mobile {
-  &__list {
-    //display: flex;
-  }
-  &__item {
-    list-style: none;
-    position: relative;
-  }
-  &__link {
-    text-decoration: none;
-  }
-
-  &__item {
-    width: 100%;
-    border: 1px solid #333333;
-    padding: 8px 20px;
-    text-align: center;
-    margin-bottom: 10px;
-    background-color: #efeee8;
-    @media (max-width: 500px) {
-      font-size: 15px;
-    }
-  }
-
-  &__link {
-    //display: flex;
-    color: #333333;
-  }
-}
-.mobile__item:hover,
-.sub-menu__list {
-  display: block;
-}
-
-.sub-mobile {
-  &__list {
-    display: none;
-    position: absolute;
-    left: 0;
-    top: 10px;
-    padding-top: 20px;
-    width: 100%;
-  }
-  &__item {
-    padding: 8px 20px;
-    border: 1px solid #333333;
-
-    text-align: center;
-  }
-
-  &__link {
-    color: #333333;
-    //background-color: #fcfbf8;
-  }
-}
-
-.arrow {
-  position: absolute;
-  top: 16px;
-  right: 20px;
-  width: 0;
-  height: 0;
-  border-top: 10px solid #333333;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-}
