--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -58,7 +58,7 @@
         @media (max-width: 767px) {
           display: none;
         }
-    }
+      }
     }
     img {
       padding-left: 4px;
@@ -103,7 +103,7 @@
 
     &:hover {
       color: blue;
-     
+    }
   }
 }
 
@@ -154,14 +154,14 @@
       transform: scale(0);
     }
   }
-  
+
   .menu {
     position: fixed;
     top: -100%;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color:#EFEEE8 ;
+    background-color: #efeee8;
     padding: 70px 0 20px 10px;
     transition: all 0.3s ease 0s;
 
@@ -193,6 +193,7 @@
       top: 0;
     }
   }
+
   .header {
     position: fixed;
     width: 100%;
@@ -206,9 +207,8 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #E4E2D3;
+      background-color: #e4e2d3;
       z-index: 2;
     }
   }
-}
 }
